# ansible-collection

./: .ansible-lint  .pre-commit-config.yaml  .yamllint  LICENSE  ansible.cfg  galaxy.yml  pyproject.toml  requirments.yml  tox.ini
.config/molecule/: config.yml
molecule/_resources/: Containerfile.j2
molecule/default/: converge.yml  verify.yml
